<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.LoginActivityAlt">

    <EditText
        android:id="@+id/login_activity_alt_username_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/login_login_hint" />

    <EditText
        android:id="@+id/login_activity_alt_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/login_username_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_activity_alt_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_activity_login_button_shape"
        android:ems="10"
        android:text="@string/login_login_button_text" />

    <TextView
        android:id="@+id/login_activity_alt_guest_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/login_activity_guest_session_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_activity_alt_login_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:textSize="14sp" />


</LinearLayout>
